@@ -17,6 +17,9 @@ git-annex (5.20150410) UNRELEASED; urgency=medium
   * Fix fsck --from a git remote in a local directory, and from
     a directory special remote.
     This was a reversion caused by the relative path changes in 5.20150113.
+  * fsck --from remote: When bad content is found in the remote,
+    and the local repo does not have a copy of the content, preserve
+    the bad content in .git/annex/bad/ to avoid further data loss.
 
  -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 20:59:43 -0400
 
